[TG-103] fix: Resolve merge conflicts with develop